{
  "version": 4,
  "terraform_version": "1.14.6",
  "serial": 35,
  "lineage": "a6129030-56f4-0ff0-ac4e-956b5cd6094c",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/64cab3c3-e1d1-440f-b122-d2caa3f58215/resourceGroups/devops-rg/providers/Microsoft.Network/networkInterfaces/devops-nic",
            "internal_domain_name_suffix": "4jfk5evkc2qezi5rag52nexs5e.hx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/64cab3c3-e1d1-440f-b122-d2caa3f58215/resourceGroups/devops-rg/providers/Microsoft.Network/publicIPAddresses/devops-pip",
                "subnet_id": "/subscriptions/64cab3c3-e1d1-440f-b122-d2caa3f58215/resourceGroups/devops-rg/providers/Microsoft.Network/virtualNetworks/devops-vnet/subnets/devops-subnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "eastasia",
            "mac_address": "70-A8-A5-05-22-74",
            "name": "devops-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "devops-rg",
            "virtual_machine_id": "/subscriptions/64cab3c3-e1d1-440f-b122-d2caa3f58215/resourceGroups/devops-rg/providers/Microsoft.Compute/virtualMachines/devops-vm"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "devops-nic",
            "resource_group_name": "devops-rg",
            "subscription_id": "64cab3c3-e1d1-440f-b122-d2caa3f58215"
          },
          "dependencies": [
            "azurerm_public_ip.pip",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "nsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/64cab3c3-e1d1-440f-b122-d2caa3f58215/resourceGroups/devops-rg/providers/Microsoft.Network/networkSecurityGroups/devops-nsg",
            "location": "eastasia",
            "name": "devops-nsg",
            "resource_group_name": "devops-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Jenkins",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "devops-nsg",
            "resource_group_name": "devops-rg",
            "subscription_id": "64cab3c3-e1d1-440f-b122-d2caa3f58215"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_jenkins",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "8080",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/64cab3c3-e1d1-440f-b122-d2caa3f58215/resourceGroups/devops-rg/providers/Microsoft.Network/networkSecurityGroups/devops-nsg/securityRules/Allow-Jenkins",
            "name": "Allow-Jenkins",
            "network_security_group_name": "devops-nsg",
            "priority": 1002,
            "protocol": "Tcp",
            "resource_group_name": "devops-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-Jenkins",
            "network_security_group_name": "devops-nsg",
            "resource_group_name": "devops-rg",
            "subscription_id": "64cab3c3-e1d1-440f-b122-d2caa3f58215"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/64cab3c3-e1d1-440f-b122-d2caa3f58215/resourceGroups/devops-rg/providers/Microsoft.Network/networkSecurityGroups/devops-nsg/securityRules/Allow-SSH",
            "name": "Allow-SSH",
            "network_security_group_name": "devops-nsg",
            "priority": 1001,
            "protocol": "Tcp",
            "resource_group_name": "devops-rg",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "Allow-SSH",
            "network_security_group_name": "devops-nsg",
            "resource_group_name": "devops-rg",
            "subscription_id": "64cab3c3-e1d1-440f-b122-d2caa3f58215"
          },
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "pip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/64cab3c3-e1d1-440f-b122-d2caa3f58215/resourceGroups/devops-rg/providers/Microsoft.Network/publicIPAddresses/devops-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "104.208.72.242",
            "ip_version": "IPv4",
            "location": "eastasia",
            "name": "devops-pip",
            "resource_group_name": "devops-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "devops-pip",
            "resource_group_name": "devops-rg",
            "subscription_id": "64cab3c3-e1d1-440f-b122-d2caa3f58215"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/64cab3c3-e1d1-440f-b122-d2caa3f58215/resourceGroups/devops-rg/providers/Microsoft.Network/virtualNetworks/devops-vnet/subnets/devops-subnet",
            "name": "devops-subnet",
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "devops-rg",
            "virtual_network_name": "devops-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "devops-subnet",
            "resource_group_name": "devops-rg",
            "subscription_id": "64cab3c3-e1d1-440f-b122-d2caa3f58215",
            "virtual_network_name": "devops-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "nsg_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/64cab3c3-e1d1-440f-b122-d2caa3f58215/resourceGroups/devops-rg/providers/Microsoft.Network/virtualNetworks/devops-vnet/subnets/devops-subnet",
            "network_security_group_id": "/subscriptions/64cab3c3-e1d1-440f-b122-d2caa3f58215/resourceGroups/devops-rg/providers/Microsoft.Network/networkSecurityGroups/devops-nsg",
            "subnet_id": "/subscriptions/64cab3c3-e1d1-440f-b122-d2caa3f58215/resourceGroups/devops-rg/providers/Microsoft.Network/virtualNetworks/devops-vnet/subnets/devops-subnet"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.nsg",
            "azurerm_resource_group.rg",
            "azurerm_subnet.subnet",
            "azurerm_virtual_network.vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "92af4af2-17aa-4c20-a3f1-01bfc692f2fc",
            "id": "/subscriptions/64cab3c3-e1d1-440f-b122-d2caa3f58215/resourceGroups/devops-rg/providers/Microsoft.Network/virtualNetworks/devops-vnet",
            "location": "eastasia",
            "name": "devops-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "devops-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/64cab3c3-e1d1-440f-b122-d2caa3f58215/resourceGroups/devops-rg/providers/Microsoft.Network/virtualNetworks/devops-vnet/subnets/devops-subnet",
                "name": "devops-subnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true,
                "security_group": "/subscriptions/64cab3c3-e1d1-440f-b122-d2caa3f58215/resourceGroups/devops-rg/providers/Microsoft.Network/networkSecurityGroups/devops-nsg"
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "devops-vnet",
            "resource_group_name": "devops-rg",
            "subscription_id": "64cab3c3-e1d1-440f-b122-d2caa3f58215"
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}